--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <div id="nome"></div>
+        <div id="risultato"></div>
 
         <script src="js/scripts.js"></script>
     </body>
